# cc-formal

./: CMakeLists.txt  Makefile  README.md
examples/: echo.c  printf.c  printn.c  puts.c  tictactoe.c
include/: cc.h  errors.h  expr_tree.h  input.h  lex.h  parse.h  program.h  symbol.h
src/: errors.cpp  expr.cpp  expr_tree.cpp  lex.cpp  main.cpp  program.cpp  symbol.cpp
test/: main.cpp  test-expr.cpp  test-lex.cpp  test-statement.cpp  test-tables.cpp
tools/: asm-16.asm  asm-64.S  boot  boot.asm  ccom  generate-code.py
